samples/_failures_safe/1761369732_e4c47d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e82f6c75.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_e82f6c75.c:154:5: error: expected expression at end of input
  154 |     if (printed ==
      |     ^~
./samples/SAFE/__tmp_e82f6c75.c:154:5: error: expected declaration or statement at end of input
